# schemachangerec

./: .gitignore  README.md  requirements.txt
rust-dist/: Cargo.toml  pyproject.toml
rust-dist/src/: lib.rs  minstore.rs
schemarec/: table.py  util.py
schemarec/extraction/: extract_schema_change.py  train_test_split.py
schemarec/mining/: __init__.py  build_graph.py  build_rule_df.py  change_projection.py  merge_graph.py
schemarec/overlap/: change_handler.py  matching_rules.py  overlap.py
schemarec/ranking/: aggregate_results.py  collect_models.py  collect_results.py  learn_ranking.py
schemarec/schemamatching/: __init__.py  schema_matching.py
schemarec/schemamatching/evaluation/: evaluate_schema_matching.py  quality_overview.py  sample-schema-changes-by-size.py  schema_change_tagging.py
schemarec/stats/: count_changed_columns.py  extract_stats.py  merge_stats.py
scripts/: create_splits.sh  run_all.sh  run_single.sh
tests/: test_build_rule_df.py  test_change_projection.py  test_learn_ranking.py  test_matching_rules.py
tests/snapshots/: snap_test_build_rule_df.py  snap_test_change_projection.py  snap_test_learn_ranking.py  snap_test_matching_rules.py
